feat: refactor books and add creating events
