# backend/src/routes/v1/events/api.yaml
@@ -15,29 +15,36 @@ tags:
             required:
               - title
               - bookId
-              - date
+              - datetime
               - duration
             properties:
               title:
                 type: string
                 description: Title of event
-              date:
+              datetime:
                 type: string
                 format: date-time
                 description: Datetime of beginning
               bookId:
-                type: number
+                type: string
                 description: Related book id
               duration:
                 type: string
                 description: Event duration
             example:
               title: Who was Martin Eden?
-              bookId: 1
+              bookId: OL17930368W
               date: 2020-02-12T07:20:50.52Z
               duration: 1 hours 30 minutes
     responses:
-      "200":
+      200:
+        description: OK
+        content:
+          application/json:
+            schema:
+              type: object
+              $ref: '#/components/schemas/Event'
+      406:
         description: OK
         content:
           application/json:
