# backend/src/validations/event.ts
@@ -1,11 +1,12 @@
 import { z } from "zod";
+import { INTERVAL_REGEXP } from "@/data/regexp";
 
 const create = z.object({
   body: z.object({
     title: z.string(),
-    date: z.string().datetime(),
-    bookId: z.number(),
-    duration: z.string(),
+    bookId: z.string().min(1),
+    datetime: z.string().datetime(),
+    duration: z.string().regex(INTERVAL_REGEXP, "Duration is not to match interval template"),
   }),
 });
 
